lab1/Test/L1-A-11-65.cmm
struct KPBLpeQ3 ;
int mSB1tv970X4P1NYr ( ) {
  struct hA8g jOzgKLRD8iShgfX ;
  struct YMUyPHL qd2RVSvjCiO9mle7n4I ;
  int VptTIpmAHwo3ND8K , mdv6Y4nyQYoPO5m8_w , fMt6NBuaBp0oexCMn11 
    = j7V <= WnBk5n_QDzmT05H__Ast + gmr * ( Kf052zVMil6sqOivlfWk 
    = || QswcFZNX && oCLuX < UqEL - iQfAoF1CkE / ! - FNk 
    [ rPz2E3B3YU36t2nPs0o = oXNtGc42mE2bhiF ( v4q9_aRPh0 
    , Ixb0DcGHG8O && yEJ59g1at == FEXvMX + DsV_w5vICPjSFIqw2 
    / 1495225845.2101213065 >= - 1951687382 != G8vwfS 
    > - jw3xvpVjzu ( ) ) ] . PfEaZwE ) ;
  float ee4JaKJG10ZP8tMTL [ 517541375 ] ;
}
struct {
}AL8ZVRP_qh6Dm3vrC 
;
struct jXU68EobI0e46PimC {
  int liKoqY2lFNHkqfD ;
};
* int ;
int eOYTlqMIHm , s0JwznT3UKbeWdg 

;
int ;
int ;
int D ( int _ , int IjJHwO4r ) {
  if ( lWhbl8JbJz8yyvemqS )   return cGZAWrBZMJ ;
else   if ( TCXsv7as ) {
    xnAz6IKYeYqnWqP9N9H ;
  }

}
int ;
int LWCOcGHxWgIwwFhzt8 ( ) {
}
int S4Ii3Z ( ) {
  OG ;
  if ( ieRCGex4V )   if rJ )   UiQ7Q8c8iUT ;
else   while ( m1izn )   SSjiCRrOJR_n ;
[ 


}
